playing with colors

--- a/index.html
+++ b/index.html
@@ -111,7 +111,7 @@
                 <img src="media/censusfour.jpeg" alt="four">
             </div>
             <div class="carousel-item">
-                <img src="media/censusfives.jpg" alt="five">
+                <img src="media/sampleone.jpeg" alt="five">
             </div>
         </div>
     
@@ -229,6 +229,8 @@
         <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyD7pEYEqsFI8HjAQveutFxTNOCcFjR9HaQ&callback=initMap" async
             defer></script>
     </div>
+
+    <hr>
 
 
     <footer class="footer">
